--- a/India_first.ipynb
+++ b/India_first.ipynb
@@ -387,35 +387,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_bar(feature):\n",
-    "    g = sns.catplot(x=feature, \n",
-    "                    data=train2,\n",
-    "                    order = train2[feature].value_counts().index,\n",
-    "                    kind='count', \n",
-    "                    height=7, \n",
-    "                    aspect = 3, \n",
-    "                    palette=\"Paired\", \n",
-    "                    edgecolor=\".6\")\n",
-    "    g.set_xticklabels(rotation=90)\n",
     "\n",
-    "def weekly_popularity_trend(feature, **kwargs):\n",
-    "    \"\"\"\n",
-    "    Feature popularity on weekly basis\n",
-    "    \"\"\"\n",
-    "    f = train2.groupby([feature, pd.Grouper(key='date',freq='W')]).size().reset_index()\n",
-    "    f['transaction_date'] = f['date'].dt.date\n",
-    "    f.columns = [feature,'date','count']\n",
-    "    sns.catplot(x=\"date\", \n",
-    "            y = 'count',\n",
-    "            hue = feature, \n",
-    "            data=f, \n",
-    "            kind='point', \n",
-    "            height=7, \n",
-    "            aspect= 2,\n",
-    "            palette='Paired')\n",
-    "    _ = plt.xticks(rotation=90)\n",
-    "\n",
-    "def weekly_currency_trend(**kwargs):\n",
+    "def weekly_trend(**kwargs):\n",
     "    \"\"\"\n",
     "    Mean transaction amount on a weekly basis for a given feature\n",
     "    \"\"\"\n",
@@ -800,7 +773,7 @@
     "for s in unique_state:\n",
     "    df2 = df1.loc[df1.state==s]\n",
     "    #print (s)\n",
-    "    weekly_currency_trend(feature=['state'])"
+    "    weekly_trend(feature=['state'])"
    ]
   },
   {
